# evaluate_sensor

./: CMakeLists.txt  package.xml
include/evaluate_sensor/: ardetection.hpp  arprocess.hpp  evaluate.hpp  evaluate_depth.hpp  evaluate_pc.hpp  plane_fitting.hpp
launch/: evaluate_sensor.launch  evaluate_sensor_senz3d.launch  evaluate_sensor_tof.launch  evaluate_sensor_xtion.launch  evaluate_sensor_zr300.launch
src/: ardetection.cpp  arprocess.cpp  evaluate.cpp  evaluate_depth.cpp  evaluate_pc.cpp  main.cpp  plane_fitting.cpp
