<?xml version="1.0"?>
<package>
  <name>evaluate_sensor</name>
  <version>0.0.0</version>
  <description>Sensor evaluation based on depth data</description>
  <author email="natalia.lyubova@gmail.com">Natalia Lyubova</author>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
</package>
